[gd_scene load_steps=8 format=3 uid="uid://bhom1q270hypd"]

[ext_resource type="Texture2D" uid="uid://duydifs80pthm" path="res://assets/images/minimalizm-ryba-ryby.jpg" id="1_anhne"]
[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_dwp7g"]
[ext_resource type="Texture2D" uid="uid://dkyl42654gnhc" path="res://assets/images/maniaquariumtitle.png" id="3_ra6ei"]
[ext_resource type="Texture2D" uid="uid://tcdk7hxpdkr7" path="res://assets/images/kisspng-drawing-plus-and-minus-signs-computer-icons-5af2b8e4149383.1339064515258564840843.png" id="4_65kq2"]
[ext_resource type="PackedScene" uid="uid://ck1ywm1aa72w1" path="res://scenes/ui/menu_trophy_2d.tscn" id="5_418fk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5q74"]
bg_color = Color(0.352941, 0.592157, 0.67451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3a7bv"]
bg_color = Color(0.337255, 0.564706, 0.65098, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dwp7g")
menu_trophy_2d = ExtResource("5_418fk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(646, 364)
scale = Vector2(0.787032, 0.787032)
texture = ExtResource("1_anhne")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 64.0
offset_right = 20.0
offset_bottom = 104.0
grow_horizontal = 2

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer"]
position = Vector2(12, 136)
texture = ExtResource("3_ra6ei")

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 42.0
offset_right = 75.0
offset_bottom = 315.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="CenterContainer2/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.533333, 0.376471, 0.180392, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_r5q74")
text = "Play"

[node name="QuitButton" type="Button" parent="CenterContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.533333, 0.376471, 0.180392, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_3a7bv")
text = "Quit"

[node name="SpritePlus2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(1224, 176)
rotation = 0.261799
scale = Vector2(0.351314, 0.33838)
texture = ExtResource("4_65kq2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 600.0
offset_right = 1288.0
offset_bottom = 700.0

[node name="TrophyBoxContainer" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 100)
layout_mode = 2

[node name="MenuTrophy2D" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false

[node name="MenuTrophy2D2" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(112, 54)

[node name="MenuTrophy2D3" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(182.4, 54.3999)

[node name="MenuTrophy2D4" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(254.4, 54.3999)

[node name="MenuTrophy2D5" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(326.4, 54)

[node name="MenuTrophy2D6" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(398.4, 54)

[node name="MenuTrophy2D7" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(468.8, 54.3999)

[node name="MenuTrophy2D8" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(540.8, 54.3999)

[node name="MenuTrophy2D9" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(614.4, 54.3999)

[node name="MenuTrophy2D10" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(686.4, 54.3999)

[node name="MenuTrophy2D11" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(756.8, 54.7998)

[node name="MenuTrophy2D12" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(828.8, 54.7998)

[node name="MenuTrophy2D13" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(900.8, 54.3999)

[node name="MenuTrophy2D14" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(972.8, 54.3999)

[node name="MenuTrophy2D15" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(1043.2, 54.7998)

[node name="MenuTrophy2D16" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(1115.2, 54.7998)

[node name="MenuTrophy2D17" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(1190.4, 54.3999)

[node name="MenuTrophy2D18" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(1260.8, 54.7998)

[node name="MenuTrophy2D19" parent="MarginContainer/TrophyBoxContainer" instance=ExtResource("5_418fk")]
visible = false
position = Vector2(1332.8, 54.7998)

[connection signal="pressed" from="CenterContainer2/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
